Fix geolocation pop up styles on mobile

--- a/src/assets/css/components/_kageolocform.scss
+++ b/src/assets/css/components/_kageolocform.scss
@@ -4,17 +4,23 @@
     bottom: 0;
     left: 0;
     margin: auto;
-    padding: 25px 50px;
+    padding: 12px 25px;
     position: absolute;
     right: 0;
     top: 0;
     max-width: 790px;
-    max-height: 420px;
+    max-height: 450px;
+
+    @media (min-width: 992px) {
+      padding: 25px 50px;
+    }
 
     .shipping-calculator-button {
       display: block;
+      margin-bottom: 24px;
       font-size: 35px;
       font-weight: 400;
+      line-height: 1.2;
       text-align: center;
       text-transform: uppercase;
       color: #000;
@@ -22,6 +28,7 @@
 
     .shipping-calculator-form {
       display: flex;
+      padding: 0;
 
       p {
         margin-bottom: 24px;
